# invoice-triage-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  run.sh  start.sh
invoice_triage_env/: .dockerignore  README.md  __init__.py  client.py  evaluate.py  models.py  openenv.yaml  pyproject.toml  tasks.py
invoice_triage_env/dashboard/: index.html  serve.py
invoice_triage_env/examples/: run_agent.py  run_llm_agent.py
invoice_triage_env/server/: Dockerfile  __init__.py  app.py  invoice_triage_environment.py  requirements.txt
invoice_triage_env/training/: __init__.py  obs_encoder.py  ollama_agent.py  policy.py  train_reinforce.py
outputs/: benchmark_results.json
server/: __init__.py  app.py
tests/: test_environment.py
